--- a/manageTasks/winforms - עותק/manageTasks-angular/src/app/sign-in/sign-in.component.html
+++ b/manageTasks/winforms - עותק/manageTasks-angular/src/app/sign-in/sign-in.component.html
@@ -3,7 +3,14 @@
 
   <div class="container">
       <h1>Welcome</h1>
-      <form class="form" [formGroup]="formGroup" (ngSubmit)="submitRegister()" name="formUser">
+    
+      <form class="form example-form" [formGroup]="formGroup" (ngSubmit)="submitRegister()" name="formUser">
+
+            <!-- <mat-form-field class="example-full-width">
+                    <input matInput placeholder="Favorite food" value="Sushi">
+                  </mat-form-field> -->
+
+
           <input type="text" placeholder="Enter Username" formControlName="userName" name="name">
           <div class="help-block" *ngIf="formGroup.controls['userName'].errors&&formGroup.controls['userName'].touched">
               <p *ngFor="let err of obj.values(formGroup.controls['userName'].errors)">{{err}}</p>
