--- a/manageTasks/winforms - עותק/manageTasks-angular/src/app/app.component.html
+++ b/manageTasks/winforms - עותק/manageTasks-angular/src/app/app.component.html
@@ -1,2 +1,2 @@
-
+<!-- <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet"> -->
 <router-outlet></router-outlet>
