--- a/manageTasks/winforms - עותק/manageTasks-angular/src/app/project-details/project-details.component.html
+++ b/manageTasks/winforms - עותק/manageTasks-angular/src/app/project-details/project-details.component.html
@@ -1,7 +1,7 @@
 
-<div *ngIf="project">
+
  <h1>project-details</h1>
 <div *ngFor="let item of projects">
-  <app-project-details-template></app-project-details-template>
+  <app-project-details-template [project]="item"></app-project-details-template>
 </div>
-</div>
+
